--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <application android:label="@string/app_name"
                  android:icon="@drawable/app_icon" android:debuggable="false">
         <activity android:name=".BluetoothChat"
-                  android:label="@string/app_name"
+                  android:label="HMonitor"
                   android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
