--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,10 +21,11 @@
      android:targetSdkVersion="10" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/app_icon" android:debuggable="false">
-        <activity android:name=".BluetoothChat"
+        <activity android:name=".Initial"
                   android:label="HMonitor"
                   android:configChanges="orientation|keyboardHidden">
             <intent-filter>
@@ -32,6 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BluetoothChat" android:label="Connect to device"></activity>
+        <activity android:name=".AddPatient" android:label="Add Patient Details"></activity>
         <activity android:name=".DeviceListActivity"
                   android:label="@string/select_device"
                   android:theme="@android:style/Theme.Dialog"
